--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
+    "cloudinary-build-url": "^0.2.4",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
